<resources>
    <string name="app_name">Venta Móvil</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Configuración</string>
    <string name="menu_edit">Editar</string>
    <string name="menu_update">Actualizar</string>
    <string name="menu_finish">Terminar</string>
    <string name="menu_send">Enviar</string>
    <string name="menu_clean">Limpiar</string>
    <string name="menu_load">Cargar</string>
    <string name="menu_logout">Cerrar</string>
    <string name="menu_repeatCode">Repetir Codigo</string>
    <string name="menu_repeatCall">Repetir Llamada</string>
    <string name="menu_listenRecord">Grabacion</string>
    <string name="menu_retypeCode">Ingresar Codigo</string>
    <string name="guiontwo">--</string>
    <string name="impuesto">Impuesto</string>
    <string name="descuento_planes">(%)</string>
    <string name="mensaje_impuesto">Recuérda indicarle al cliente el cobro por el impuesto telefónico</string>
    <string name="mensaje_extensiones">Esta Dirección no soporta extensiones HFC</string>
    <string name="total_venta">Total de Venta</string>
    <string name="resumen_venta">Resumen de Venta</string>
    <string name="ventamovil">Venta Móvil</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="fecha_agenda">Fecha\nAgenda</string>
    <string name="aceptar">Aceptar</string>
    <string name="aplicar">Aplicar</string>
    <string name="observaciones">Observaciones</string>
    <string name="motivo_no_compra">Motivo</string>
    <string name="pago_mensual">Pago Mensual\nCompetencia</string>
    <string name="vigencia_contrato">Vigencia del\nContrato\nCompetencia</string>
    <string name="empaquetado">Empaquetado</string>
    <string name="otra_competencia">Otra\nCompetencia</string>
    <string name="productos">Productos\nCompetencia</string>
    <string name="competencia">Datos Competencia</string>
    <string name="gestorVisitas">G. De Ruta</string>
    <string name="confirmacion">Confirmación</string>
    <string name="telefono">Teléfono</string>
    <string name="direccion">Dirección</string>
    <string name="direccionNormalizada">Dirección\nNormalizada</string>
    <string name="tipoDocumento">Tipo Documento</string>
    <string name="atencion">Atención</string>
    <string name="documento">Documento</string>
    <string name="codigo">Código</string>
    <string name="cod_prueba"/>
    <string name="ced_prueba"/>
    <string name="referencia_personal">Contacto Personal</string>
    <string name="referencia_familiar">Contacto Familiar</string>
    <string name="codigo_hogar">Código Hogar</string>
    <string name="codigo_hogar_points">Código Hogar:</string>
    <string name="ingresar">Ingresar</string>
    <string name="cedula">Cédula</string>
    <string name="tipo">Tipo</string>
    <string name="transaccion">Transacción</string>
    <string name="otra_transaccion">Otra Transacción</string>
    <string name="evento">Evento</string>
    <string name="pedido">Pedido</string>
    <string name="cun">Cun</string>
    <string name="digilenciar_campos">Debe diligenciar todos los campos que tienen *</string>
    <string name="cancelar">Cancelar</string>
    <string name="guardar">Guardar</string>
    <string name="asterisco">*</string>
    <string name="nombre">Nombres</string>
    <string name="apellido">Apellidos</string>
    <string name="fecha_exped">Fecha Expedición</string>
    <string name="lugar_exped">Lugar Expedición</string>
    <string name="proyectos_rurales">Proyectos Rurales</string>
    <string name="contrato">Contrato</string>
    <string name="unidad_residencial">Unidad Residencial</string>
    <string name="punto_referencia">Punto Referencia</string>
    <string name="barrio">Barrio</string>
    <string name="estrato">Estrato</string>
    <string name="tvanaloga">TV Analoga</string>
    <string name="tvanaloga1">Tv An</string>
    <string name="tipo_servicio">Tipo Servicio</string>
    <string name="telefono_servicio">Teléfono Servicio</string>
    <string name="telefono_destino">Teléfono IVR</string>
    <string name="telefono_second">Teléfono Secundario</string>
    <string name="celular">Celular</string>
    <string name="correo_electronico">Correo Electrónico</string>
    <string name="login">Login</string>
    <string name="pinhp">Pin Hot Pack</string>
    <string name="unemas">UneMas</string>
    <string name="nombre_contacto">Nombres Contacto</string>
    <string name="apellido_contacto">Apellidos Contacto</string>
    <string name="telefono_contacto">Teléfono Contacto</string>
    <string name="paginacion">Paginación</string>
    <string name="telefonia">Telefonía</string>
    <string name="television">Televisión</string>
    <string name="internet">Internet</string>
    <string name="adichd">Television HD</string>
    <string name="menu_crear">Crear</string>
    <string name="tresg">3G</string>
    <string name="cuatrog">4G</string>
    <string name="localizacion">Localizacion: </string>
    <string name="estrato_points">Estrato: </string>
    <string name="adicionales">Adicionales:</string>
    <string name="factura">Factura</string>
    <string name="resultado">Resultado</string>
    <string name="nombre_points">Nombre: </string>
    <string name="estado_points">Estado: </string>
    <string name="estado">Estado</string>
    <string name="accion_points">Acción: </string>
    <string name="accion">Acción</string>
    <string name="origen_points">Origen: </string>
    <string name="origen">Origen </string>
    <string name="cedula_points">Cedula:</string>
    <string name="direcciones_points">Direcciones:</string>
    <string name="telefono_points">Teléfono:</string>
    <string name="direccion_points">Dirección:</string>
    <string name="ciudad_points">Ciudad:</string>
    <string name="ciudad">Ciudad</string>
    <string name="tipo_mayus">TIPO</string>
    <string name="producto_mayus">PRODUCTO</string>
    <string name="producto">Producto</string>
    <string name="ind_iva">IND IVA</string>
    <string name="epm_iva">EMP IVA</string>
    <string name="descuento_mayus">DESCUENTO</string>
    <string name="to_mayus">TO</string>
    <string name="tv_mayus">TV</string>
    <string name="ba_mayus">BA</string>
    <string name="tresg_mayus">3G</string>
    <string name="cuatrog_mayus">4G</string>
    <string name="total_mayus">TOTAL</string>
    <string name="less">-</string>
    <string name="text11_example">trio superplay to ilimitada + ldn</string>
    <string name="text61_example">trio superplay 4g 6gb 36 meses</string>
    <string name="text41_example">trio superplay 50mb</string>
    <string name="text21_example">trio superplay mixto platino</string>
    <string name="text51_example">modem planes demanda y pospago 8 dias</string>
    <string name="adicionales_nopoint">adicionales</string>
    <string name="ceros">0</string>
    <string name="date">2013-07-31</string>
    <string name="small_text">Small Text</string>
    <string name="medium_text">Medium Text</string>
    <string name="twenty">20</string>
    <string name="disp">Disp</string>
    <string name="titulo_configuracion">Titulo Configuración</string>
    <string name="valor_points">Valor:</string>
    <string name="gota_points">Nombre Gota:</string>
    <string name="valor_gota_points">Valor Gota:</string>
    <string name="valor_descuento_points">Valor Descuento: </string>
    <string name="sinPromocion">Quitar Promo:</string>
    <string name="entrega">Entrega</string>
    <string name="precio_modem">Precio Modem</string>
    <string name="precio">Precio</string>
    <string name="porcentaje">Porcentaje</string>
    <string name="pago_modem">Pago Modem</string>
    <string name="tipo_migracion">Plan Existente</string>
    <string name="tipo_tecnologia">Tecnología</string>
    <string name="tipo_zona">Tipo Zona</string>
    <string name="modem">Modem</string>
    <string name="migracion">Cambio de Plan</string>
    <string name="fifty_percent">50%</string>
    <string name="descuento_points">Descuento:</string>
    <string name="plan_points">Plan:</string>
    <string name="plan">Plan</string>
    <string name="cincomil">5000</string>
    <string name="wifi">Wifi</string>
    <string name="pago_linea">Pago Linea</string>
    <string name="linea_adicional">Linea Adicional</string>
    <string name="Empaquetado">Empaquetado</string>
    <string name="cambio_plan">Cambio de Plan</string>
    <string name="numero_tv">Numero Televisores</string>
    <string name="numero_ex"># EXT</string>
    <string name="numero_pvr"># DVR </string>
    <string name="numero_hd"># HD </string>
    <string name="numero_sd"># SD </string>
    <string name="xx">xxxxx</string>
    <string name="seleccionar_todos">Seleccionar Todos</string>
    <string name="alerta_ced_incorrecta">Verificar dirección seleccionada</string>
    <string name="e_learning">E-Learning</string>
    <string name="validador">Validador</string>
    <string name="peticion">Petición</string>
    <string name="portafolio">Portafolio</string>
    <string name="cobertura">Cobertura</string>
    <string name="estado_cuentas">Estado Cuentas</string>
    <string name="estado_pedido">Estado Pedido</string>
    <string name="tarificador">Tarificador</string>
    <string name="info_cliente">Info Cliente</string>
    <string name="checking">Comprobando</string>
    <string name="prospecto">Prospecto</string>
    <string name="precision">Precisión</string>
    <string name="tablet">Validar Tablet</string>
    <string name="amigocuentas">Amigo Cuentas</string>
    <string name="cuenta_une">Cuenta Une</string>
    <string name="blindaje">Blindaje</string>
    <string name="motivo">Motivo</string>
    <string name="submotivo">Sub Motivo</string>
    <string name="distancia">Distancia</string>
    <string name="nodos">Nodo</string>
    <string name="goback">←</string>
    <string name="gonext">→</string>
    <string name="sec_nivelestudio_string">Nivel de Estudios</string>
    <string name="sec_profesion_string">Profesión</string>
    <string name="sec_ocupacion_string">Ocupación</string>
    <string name="sec_cargo_string">Cargo</string>
    <string name="sec_nivelingresos_string">Nivel de Ingresos</string>
    <string name="sec_estado_civil_string">Estado Civil</string>
    <string name="sec_genero_string">Genero</string>
    <string name="sec_fechanacimiento_string">Fecha de Nacimiento</string>
    <string name="sec_personasacargo_string">Personas a Cargo</string>
    <string name="sec_tipovivienda_string">Tipo de Vivienda</string>
    <string name="sec_tipopredio_string">Tipo Predio</string>
    <string name="sec_tipopropiedad_string">Tipo Propiedad</string>
    <string name="sec_nombrepredio_string">Nombre de Predio</string>
    <string name="sec_municipiossc_string">Municipio SSC</string>
    <string name="fac_departamento_string">Departamento Facturación</string>
    <string name="fac_municipio_string">Municipio de Facturación</string>
    <string name="constructores_string">Constructor</string>
    <string name="migrar_string">Anotación</string>
    <string name="fac_direccion_string">Dirección de Facturación</string>
    <string name="celular_contacto">Celular de Contacto</string>
    <string name="parentesco_contacto">Parentesco de Contacto</string>
    <string name="fac_barrio_string">Barrio de Facturación</string>
    <string name="ejemplo_1_calle">Ejemplo: Calle</string>
    <string name="desc_cuatrog">Icono de 4G</string>
    <string name="cliente">Cliente:</string>
    <string name="fecha">Fecha</string>
    <string name="hora">Hora</string>
    <string name="venta">Venta</string>
    <string name="eliminar">Elim</string>
    <string name="configuraciondecos">Configuración Decos</string>
    <string name="fideliza">Fideliza</string>
    <string name="hogarnuevo">Hogar Nuevo</string>
    <string name="analoga">Análoga</string>
    <string name="tipooferta">Tipo Oferta</string>
    <string name="oferta">Oferta</string>
</resources>