<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_settings" />

    <item
        android:id="@+id/menu_finish"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_finish" />

    <item
        android:id="@+id/menu_update"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_update" />

    <item
        android:id="@+id/menu_clean"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_clean" />

    <!--   	<item -->
    <!--         android:id="@+id/menu_load" -->
    <!--         android:orderInCategory="100" -->
    <!--         android:showAsAction="never" -->
    <!--         android:title="@string/menu_load"/> -->

    <item
        android:id="@+id/menu_logout"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_logout" />

</menu>