<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="5dp" >
    
    <TableLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shrinkColumns="*"
        android:stretchColumns="*"
        android:layout_margin="10dp">
        
        <TableRow 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_title_resumen" 
            android:layout_marginBottom="1dp">
            
            <ImageButton
                android:contentDescription="@string/desc_cuatrog"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:background="@drawable/logo_im" 
                android:layout_margin="10dp"
                android:layout_marginTop="-10dp"/>
            
            <TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_span="6"
		        android:layout_gravity="bottom"
		        android:text="@string/tresg" 
				android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/purple"
                android:textStyle="bold"/>
            
        </TableRow>
        
        <TableRow 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@color/white">
     
	        <TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_span="2"
		        android:text="@string/plan_points"/>
	        
	        <TextView 
	            android:id="@+id/lblPlan"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_span="6"
		        android:text="@string/cincomil"
		        android:paddingLeft="7dp"
		        android:textStyle="bold"/>
            
        </TableRow>
        
        <TableRow 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@color/white">
     
	        <LinearLayout 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_vertical"
		        android:layout_span="2"
		        android:orientation="vertical">
	        
		        <TextView 
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/descuento_points"/>
		        
		        <TextView 
		            android:id="@+id/lblDescuento"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:text="@string/fifty_percent"/>
		        
	        </LinearLayout>
	        
	        <Spinner 
	            android:id="@+id/sltDuracion"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_span="6"
	            android:background="@drawable/spin"
	            android:paddingLeft="25dp"
	            android:paddingRight="45dp"
	            android:layout_marginRight="25dp" />
            
        </TableRow>
        
        <TableRow 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@color/white">
     
			<CheckBox
			    android:id="@+id/chkMigracion"
			    android:button="@drawable/style_checkboxes"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_span="4"
	            android:text="@string/migracion" />
			
			<CheckBox
			    android:id="@+id/chkModem"
			    android:button="@drawable/style_checkboxes"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_span="4"
	            android:text="@string/modem" />
            
        </TableRow>
        
        <TableRow 
            android:id="@+id/trlTipoMigracion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:padding="10dp"
            android:background="@color/white">

            <TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		       	android:layout_gravity="center_vertical"
		        android:layout_span="2"
		        android:text="@string/tipo_migracion"/>
	        
	        <Spinner 
	            android:id="@+id/sltTipoMigracion"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_span="6"
	            android:background="@drawable/spin"
	            android:paddingLeft="25dp"
	            android:paddingRight="45dp"
	            android:layout_marginRight="25dp"/>
            
        </TableRow>
        
        <TableRow 
            android:id="@+id/trlPagoModem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:padding="10dp"
            android:background="@color/white">

            <TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		       	android:layout_gravity="center_vertical"
		        android:layout_span="2"
		        android:text="@string/pago_modem"/>
	        
	        <Spinner 
	            android:id="@+id/sltPagoModem"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_span="6"
	            android:background="@drawable/spin"
	            android:paddingLeft="25dp"
	            android:paddingRight="45dp"
	            android:layout_marginRight="25dp"/>
            
        </TableRow>
        
        <TableRow 
            android:id="@+id/trlPorcentaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:padding="10dp"
            android:background="@color/white">

            <TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		       	android:layout_gravity="center_vertical"
		        android:layout_span="2"
		        android:text="@string/porcentaje"/>
	        
	        <Spinner 
	            android:id="@+id/sltPorcentaje"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_span="6"
	            android:background="@drawable/spin"
	            android:paddingLeft="25dp"
	            android:paddingRight="45dp"
	            android:layout_marginRight="25dp"/>
            
        </TableRow>
        
        <TableRow 
            android:id="@+id/trlPrecioModem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:padding="10dp"
            android:background="@color/white">

            <TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		       	android:layout_gravity="center_vertical"
		        android:layout_span="2"
		        android:text="@string/precio_modem"/>
	        
	        <EditText 
	            android:id="@+id/txtPrecioModem"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_span="6"
	            android:inputType="number"
	            android:background="@drawable/edittextbg"
	            android:paddingLeft="20dp"
	            android:paddingRight="20dp"
	            android:layout_marginRight="35dp"/>
            
        </TableRow>
        
        <TableRow 
            android:id="@+id/trlEntrega"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:padding="10dp"
            android:background="@color/white">

            <TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		       	android:layout_gravity="center_vertical"
		        android:layout_span="2"
		        android:text="@string/entrega"/>
	        
	        <Spinner 
	            android:id="@+id/sltEntrega"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_span="6"
	            android:background="@drawable/spin"
	            android:paddingLeft="25dp"
	            android:paddingRight="45dp"
	            android:layout_marginRight="25dp"/>
            
        </TableRow>
        
        <TableRow 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
			android:background="@color/white">
			
			<RelativeLayout 
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_span="3">
			    
			    <TextView 
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/valor_points"/>
		        
		        <TextView 
		            android:id="@+id/lblValor"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:textStyle="bold"
			        android:layout_marginRight="10dp"
			        android:gravity="right" />
			    
			</RelativeLayout>
			
			<RelativeLayout 
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_span="4"
			    android:background="@color/white">
			    
			    <TextView 
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/valor_descuento_points"/>
		        
		        <TextView 
		            android:id="@+id/lblValorDescuento"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:textStyle="bold"
			        android:gravity="right"
			        android:layout_marginRight="25dp"
			        android:textColor="@color/purple" />
			    
			</RelativeLayout>
			
		</TableRow>
        
	</TableLayout>

</LinearLayout>